fix: style: prose: dark mode underlines

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,11 +14,13 @@
 		prose-h5:font-medium prose-h5:before:content-['####'] prose-h5:before:mr-2 prose-h5:relative prose-h5:-left-10
 		prose-a:prose-headings:border-b-2
 		prose-a:prose-headings:border-neutral-600
+		dark:prose-a:prose-headings:border-neutral-200
 		prose-a:no-underline
 		prose-a:prose-headings:pb-2
 		prose-a:border-b-2
 		prose-a:pb-1
 		prose-a:border-neutral-200
+		dark:prose-a:border-neutral-600
 		prose-headings:text-base
 		underline-offset-8
 	}
